fix a error and add metas

--- a/cn.lys.audiomanager/Runtime/AudioManager.asmdef
+++ b/cn.lys.audiomanager/Runtime/AudioManager.asmdef
@@ -2,8 +2,9 @@
     "name": "AudioManager",
     "rootNamespace": "Lys.Audio",
     "references": [
+        "Sirenix.OdinInspector.Attributes",
         "YooAsset",
-        "Sirenix.OdinInspector.Attributes"
+        "ET.YooAssets"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
